[package]
name = "aodv"
version = "0.1.0"
authors = ["Lucas Rooyakkers <lucas.rooyakkers@drdc.rddc.gc.ca>"]

[dependencies]
chrono = "0.4"
time = "0.3.7"
futures = "0.1.31"
bytes = "0.4"
tokio = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
yaml-rust = "0.4.5"
log = "0.4.14"
rayon = "1.0"
clap = "3.1.2"
lazy_static = "1.4"
byteorder = "1.2"
