[package]
name = "aodv"
version = "0.1.0"
authors = ["Lucas Rooyakkers <lucas.rooyakkers@drdc.rddc.gc.ca>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "aodv"

[dependencies]
chrono = "0.4"
time = "0.3.7"
futures = "0.3.21"
bytes = "1.1.0"
tokio = { version="1.17.0", features=["macros", "rt-multi-thread"]}
tokio-util = { version="0.7.0", features=["codec", "net"] }
tokio-timer = "0.2.13"
yaml-rust = "0.4.5"
log = "0.4.14"
rayon = "1.0"
clap = "4.0.16"
lazy_static = "1.4"
byteorder = "1.2"
rtnetlink = "0.9.1"
